--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>YourFirstXV</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <title>YourFirstXV</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <%= stylesheet_link_tag    "application", media: "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+     <div class="container">
+       <ul>
+       <ul class="nav nav-tabs">
+        <li><%= link_to "YourFirstXV", welcome_index_path %></li>
+        <li><%= link_to "About", welcome_about_path %></li>
+      </ul>
 
-  <ul>
-    <li><%= link_to "Home", welcome_index_path%></li>
-    <li><%= link_to "About", welcome_about_path%></li>
-  </ul>
+      <%= yield %>
+     </div>
 
-<%= yield %>
-
-</body>
+  </body>
 </html>
